[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "x-free-scraper"
version = "0.1.0"
description = "Free X (Twitter) scraper using Playwright — no API key required"
authors = [
  {name = "insalada", email = "insalada@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
]
readme = "README.md"
license = "MIT"
[tool.setuptools.packages.find]
where = ["."]
include = ["x_scraper*"]
